# cqlite

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  cargo.toml  cqlite.h
benches/: basic_queries.rs  match_queries.rs
gqlite/: Cargo.toml
gqlite/src/: lib.rs
parser/: Cargo.toml
parser/src/: ast.rs  lib.rs
src/: error.rs  ffi.rs  lib.rs  params.rs  property.rs  store.rs
src/parser/: ast.rs  mod.rs  tests.rs
src/planner/: build.rs  compile.rs  mod.rs  plan.rs
src/planner/optimize/: loads.rs  mod.rs  normalize.rs  tests.rs
src/runtime/: mod.rs  program.rs  vm.rs
src/store/: iter.rs  mod.rs  tests.rs  txn.rs  types.rs
tests/: basic_queries.rs  create_queries.rs  delete_queries.rs  ffi_api.rs  match_queries.rs  match_queries_where.rs  query_synatx_errors.rs  return_queries.rs  set_queries.rs  txn_semantics.rs  where_conditions.rs
tests/common/: mod.rs
