[package]
name = "gqlite"
description = "An embedded property graph database."
keywords = ["database", "graph", "cypher", "gql", "acid"]
categories = ["database", "database-implementations"]
version = "0.1.0"
edition = "2018"
repository = "https://github.com/dyedgreen/gqlite"
license = "MIT"
exclude = [".*"]

[dependencies]
bincode = "1.3.3"
peg = "0.7.0"
sanakirja = "1.2.11"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "basic_queries"
harness = false
[[bench]]
name = "match_queries"
harness = false
